--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
         android:label="mukki"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyDX13Cw423mW5Mpr6aEEGU6ELjVtJ7FrQA"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
