--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,11 +62,7 @@ flutter:
     - lib/pictures/logo.png
     - lib/pictures/google_login.png
     - lib/pictures/kakao_login.png
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    - lib/pictures/res1.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
