--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_maps_flutter: ^2.10.0
   flutter_secure_storage: ^9.2.2
   kakao_flutter_sdk_user: ^1.9.6
+  flutter_localization: ^0.2.3
 
 dev_dependencies:
   flutter_test:
