--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   kakao_flutter_sdk_user: ^1.9.6
   flutter_localization: ^0.2.3
+  shared_preferences: ^2.3.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
